packages/ui/src/theme/css/component/authenticator.scss
/* Center by default */
[data-amplify-authenticator] {
  display: grid;
}

[data-amplify-authenticator][data-variation='modal'] {
  display: grid;
  width: 100vw;
  height: 100vh;
  overflow: auto;
  background-color: var(--amplify-colors-background-secondary, #e1e5e9);

  /* Override browser default `body { margin: 8px }` */
  position: fixed;
  top: 0;
  left: 0;

  /* Having a z-index at least "wins" by default */
  z-index: 1;
}

/* Texture for modal */
[data-amplify-authenticator][data-variation='modal']::before {
  // Fill modal space, but don't scroll
  position: absolute;
  width: 100%;
  height: 100%;

  content: '';
  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' id='texture' data-v-1d260e0e=''%3E%3Cfilter id='noise' data-v-1d260e0e=''%3E%3CfeTurbulence type='fractalNoise' baseFrequency='.8' numOctaves='4' stitchTiles='stitch' data-v-1d260e0e=''%3E%3C/feTurbulence%3E%3CfeColorMatrix type='saturate' values='0' data-v-1d260e0e=''%3E%3C/feColorMatrix%3E%3C/filter%3E%3Crect width='100%25' height='100%25' filter='url(%23noise)' data-v-1d260e0e=''%3E%3C/rect%3E%3C/svg%3E");
  opacity: 0.35;
  filter: 'contrast(120%) brightness(120%)';
}

[data-amplify-authenticator] [data-amplify-container] {
  /* Fix z-index of texture being over the Authenticator */
  position: relative;
  place-self: center;
  width: 30rem;
  @media (max-width: 30rem) {
    width: 100%;
  }
}

// footers inside each screen should have some margin below it
[data-amplify-authenticator] [data-amplify-router] [data-amplify-footer] {
  padding-bottom: var(--amplify-space-medium);
  text-align: center;
}

[data-amplify-authenticator] [data-amplify-router] {
  background-color: var(--amplify-colors-background-primary);
  box-shadow: var(--amplify-shadows-medium);
}

[data-amplify-authenticator] [data-amplify-form] {
  padding: var(--amplify-space-xl);
}

[data-amplify-authenticator] [data-state='inactive'][role='tab'] {
  background-color: var(--amplify-colors-background-secondary);
}

/* Remove double-border between the password field & reveal button */
[data-amplify-authenticator]
  .amplify-passwordfield
  .amplify-button:not(:focus) {
  border-left: none;
}

[data-amplify-authenticator]
  .amplify-phonenumberfield
  .amplify-countrycodeselect {
  height: 100%;
}

[data-amplify-authenticator]
  .amplify-phonenumberfield
  .amplify-select__wrapper {
  height: 100%;
}

/* Remove double-border between the phone field & country select  */
[data-amplify-authenticator] .amplify-phonenumberfield select:not(:focus) {
  border-right: none;
}

[data-amplify-authenticator] [data-or-container] {
  position: relative;
  color: gray;
  align-items: center;
  justify-content: center;
  padding: 1.5rem 0px;

  [data-or-line] {
    position: absolute;
    background: var(--amplify-colors-white);
    z-index: 1;
    padding: 0px 1.5rem;
  }
}

